@@ -335,6 +335,8 @@ g_mount_unmount (GMount *mount,
 
   if (iface->unmount == NULL)
     {
+      /* Translators: This is an error message for mount objects
+         that don't implement unmount. */
       g_simple_async_report_error_in_idle (G_OBJECT (mount),
 					   callback, user_data,
 					   G_IO_ERROR, G_IO_ERROR_NOT_SUPPORTED,
@@ -407,6 +409,8 @@ g_mount_eject (GMount *mount,
 
   if (iface->eject == NULL)
     {
+      /* Translators: This is an error message for mount objects
+         that don't implement eject. */
       g_simple_async_report_error_in_idle (G_OBJECT (mount),
 					   callback, user_data,
 					   G_IO_ERROR, G_IO_ERROR_NOT_SUPPORTED,
@@ -485,8 +489,10 @@ g_mount_remount (GMount *mount,
   iface = G_MOUNT_GET_IFACE (mount);
 
   if (iface->remount == NULL)
-    {
-      g_simple_async_report_error_in_idle (G_OBJECT (mount),
+    { 
+      /* Translators: This is an error message for mount objects
+         that don't implement remount. */
+     g_simple_async_report_error_in_idle (G_OBJECT (mount),
 					   callback, user_data,
 					   G_IO_ERROR, G_IO_ERROR_NOT_SUPPORTED,
 					   _("mount doesn't implement remount"));
